[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scriptss/Ink.gd" type="Script" id=1]
[ext_resource path="res://Scriptss/Audio.gd" type="Script" id=2]
[ext_resource path="res://Font/Lato/Lato-Italic.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Font/Lato/Lato-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Font/Lato/Lato-Bold.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Font/Lato/Lato-BlackItalic.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Scriptss/GameText.gd" type="Script" id=7]

[sub_resource type="DynamicFont" id=1]
size = 52
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 52
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 52
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 52
font_data = ExtResource( 4 )

[node name="Ink" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 256.0
margin_bottom = 120.0
rect_min_size = Vector2( 1280, 720 )
script = ExtResource( 1 )

[node name="Label" type="RichTextLabel" parent="."]
margin_top = 10.0
margin_right = 1280.0
margin_bottom = 410.0
rect_min_size = Vector2( 1230, 400 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_fonts/bold_italics_font = SubResource( 1 )
custom_fonts/italics_font = SubResource( 2 )
custom_fonts/bold_font = SubResource( 3 )
custom_fonts/normal_font = SubResource( 4 )
bbcode_enabled = true
bbcode_text = "[b]Example Text [/b]
[i]Example Text [/i]
[b][i]Example Text Example Text[/i][/b] 
Example Text Example Text Example Text Example Text Example Text Example Text Example Text Example Text"
text = "Example Text 
Example Text 
Example Text Example Text 
Example Text Example Text Example Text Example Text Example Text Example Text Example Text Example Text"
scroll_active = false
script = ExtResource( 7 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_top = 420.0
margin_right = 1280.0
margin_bottom = 720.0
rect_min_size = Vector2( 1280, 300 )

[node name="Choice_Container" type="VBoxContainer" parent="ColorRect"]
margin_left = 150.0
margin_top = 25.0
margin_right = 1134.0
margin_bottom = 272.0
custom_constants/separation = 50

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
script = ExtResource( 2 )

[connection signal="call_sfx" from="." to="AudioStreamPlayer" method="_on_Ink_call_sfx"]
[connection signal="focus_entered" from="." to="AudioStreamPlayer" method="_on_Ink_focus_entered"]
[connection signal="stop_sfx" from="." to="AudioStreamPlayer" method="_on_Ink_stop_sfx"]
[connection signal="meta_clicked" from="Label" to="." method="_on_Label_meta_clicked"]
